[tool.poetry]
name = "code-ingest"
version = "0.1.0"
description = "The sort of CI server you're happy to let people throw crap at!"
authors = ["RACTF Contributors"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://gitlab.com/ractf/code-ingest"
homepage = "https://gitlab.com/ractf/code-ingest"

classifiers = [
  "Programming Language :: Python :: 3.7",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Topic :: Internet :: WWW/HTTP :: WSGI",
  "Environment :: Web Environment",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Topic :: Software Development",
  "Intended Audience :: Education"
]

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.12.13"
uvicorn = "^0.10.4"
docker = "^4.1.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-bandit = "*"
flake8-bugbear = "*"
flake8-import-order = "*"
flake8-string-format = "*"
flake8-tidy-imports = "*"
flake8-todo = "*"
mypy = "*"
requests = "^2.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
