[tool.poetry]
name = "code-ingest"
version = "0.5.0"
description = "The sort of CI server you're happy to let people throw crap at!"
authors = ["RACTF Contributors"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ractf/code-ingest"
homepage = "https://github.com/ractf/code-ingest"

classifiers = [
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Topic :: Internet :: WWW/HTTP :: WSGI",
  "Environment :: Web Environment",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Topic :: Software Development",
  "Intended Audience :: Education"
]

include = [
  "docker-build/*",
  "setup-code/*"
]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "*"
uvicorn = "*"
docker = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-bandit = "*"
flake8-bugbear = "*"
flake8-import-order = "*"
flake8-string-format = "*"
flake8-tidy-imports = "*"
flake8-todo = "*"
mypy = "*"
requests = "*"

[tool.poetry.scripts]
ingest_server = "code_ingest.__main__:main"
ingest_tests = "tests.functionality_check:run_tests"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
